--- a/work.html
+++ b/work.html
@@ -16,7 +16,7 @@
     <header class="py-0">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-            <h3 class="navbar-brand" href="index.html">DaiXuan</h1>
+                <h3 class="navbar-brand"><a class="nav-link" href="index.html">DaiXuan</a></h3>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
 					<span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
                                 <a class="nav-link" href="contact.html">Contact</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Resume</a>
+                                <a class="nav-link" href="resources/My Resume.pdf">Resume</a>
                             </li>
 						</ul>
                     </div>  
@@ -62,11 +62,11 @@
                     
                     <div class="col-lg-6 col-md-9 mb-5">
                         <div class="media d-md-flex flex-row-reverse justify-content-around align-items-center p-md-3">
-                            <img class="my-4" src="assets/TimbuktuPoly.png" width="320" height="180">  
+                            <img class="shadow-right my-4" src="assets/drinkPromo.jpg" width="230" height="180"> 
                             <div class="media-body ml-1">
-                                <h4>Timbuktu<br> Polytechnic website</h4>
+                                <h4>Drink Promotion<br> website</h4>
                                 <p class="mt-3">
-                                    <a href="timbuktu.html" class="btn-primary">View work</a>
+                                    <a href="drink.html" class="btn-primary">View work</a>
                                 </p>
                             </div>
                         </div>
@@ -88,11 +88,11 @@
     
                     <div class="col-lg-6 col-md-9 mb-5">
                         <div class="media d-md-flex flex-row-reverse justify-content-around align-items-center p-md-3">
-                            <img class="shadow-right my-4" src="assets/drinkPromo.jpg" width="230" height="180"> 
+                            <img class="my-4" src="assets/TimbuktuPoly.png" width="320" height="180">  
                             <div class="media-body ml-1">
-                                <h4>Drink Promotion<br> website</h4>
+                                <h4>Timbuktu<br> Polytechnic website</h4>
                                 <p class="mt-3">
-                                    <a href="drink.html" class="btn-primary">View work</a>
+                                    <a href="timbuktu.html" class="btn-primary">View work</a>
                                 </p>
                             </div>
                         </div>
