--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <header class="py-0">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-            <h3 class="navbar-brand" href="index.html">DaiXuan</h1>
+                <h3 class="navbar-brand"><a class="nav-link" href="index.html">DaiXuan</a></h3>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
 					<span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
                                 <a class="nav-link" href="contact.html">Contact</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Resume</a>
+                                <a class="nav-link" href="resources/My Resume.pdf">Resume</a>
                             </li>
 						</ul>
                     </div>  
@@ -56,7 +56,7 @@
                             developing skills.
                         </p>
 
-                        <a>Resume (pdf)</a>
+                        <a class="nav-link" href="resources/My Resume.pdf">Resume (pdf)</a>
 
                         <div class="d-flex social-media">
                             <img class="mt-2 mr-md-1" src="assets/icons/IG_black.png" width="52" height="50">
