--- a/styleguide.html
+++ b/styleguide.html
@@ -80,12 +80,12 @@
                 <h3>Highlights</h3>
 
                 <div class=" boxSpacing text-center">
-                    <img class="mx-md-4" src="assets/stylguide/webFull.jpg" width="500" height="340">
+                    <img class="mx-md-4 box-shadow-left" src="assets/stylguide/webFull.jpg" width="500" height="340">
                     <p class="mx-md-5 pl-lg-4 mt-md-5 text-dark">Website design</p>
                 </div>
 
                 <div class=" boxSpacing text-center">
-                    <img class="mx-md-4" src="assets/stylguide/styleguideFULL.jpg" width="500" height="340">
+                    <img class="mx-md-4 box-shadow-right" src="assets/stylguide/styleguideFULL.jpg" width="500" height="340">
                     <p class="mx-md-5 pl-lg-4 mt-md-5 text-dark">UX/UI styleguide based on website design</p>
                 </div>
             
