--- a/index.html
+++ b/index.html
@@ -64,8 +64,14 @@
         <div class="container text-light">
             <div class="inner-wrapper justify-content-center align-items-center">
                 <h4>A little about me</h4>
-                <p class="my-3">A UI/UX designer that is interested in .....with knowledge in developing various websites that allow users to interact different kinds of elements within a web application. With knowledge of back-end developer, I am able to combine logic and integration to better my web developing skills.</p>
-                <p>I’ve graduated from Nanyang Polytechnic 2021 with a Diploma in Multimedia and Infocomm Technology. </p>
+                <p class="my-3">A UI/UX designer interested in designing websites user interface to enhance the user experience when exploring a website. 
+                    By designing and researching different wireframes or protoypes, I can pick out the best suited wireframe or prototype to integrate into a web project.
+                    </p>
+                
+                <p class="my-3">Additionally, with the knowledge of a front-end developer, I am able to develop various websites that allow users to interact different kinds of elements within a web application, 
+                    along with some grasp of back-end developer, I am able to combine logic and integration to better my web developing skills.</p>
+
+                <p>I’ve graduated from Nanyang Polytechnic 2021 with a Diploma in Multimedia and Infocomm Technology.</p>
                 <p>
                     <a href="about.html" class="btn-primary">About Me</a>
                 </p>
