--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
 
                                 <!-- Disable Captcha -->
                                 <input type="hidden" name="_captcha" value="false">
-                                <input type="hidden" name="_next" value="success.html">
+                                <input type="hidden" name="_next" value="https://yaemikogit.github.io/dxportfolio.github.io/success.html">
 
                                 <input type="text" class="form-control" name="name" id="name" aria-describedby="nameHelp" placeholder="Name">
                                 <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp" placeholder="Email">
