--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="container">
             <div class="d-md-flex flex-row-reverse justify-content-center align-items-center my-3">
                 <div>
-                    <img class="profile shadow-right" src="assets/profile.jpg">
+                    <img class="profile shadow-right" src="assets/profile.jpg" alt="profile picture">
                 </div>
                 <div class="text-box pr-3 text-center text-md-left">
                     <h5>Hello!</h5>
@@ -88,7 +88,7 @@
 
                 <div class="col-lg-5 col-md-9 mb-5">
                     <div class="media d-md-flex flex-row-reverse justify-content-around align-items-center px-3">
-                        <img class="my-md-4" src="assets/Sentosa.png" width="300" height="160">
+                        <img class="my-md-4" src="assets/Sentosa.png" width="300" height="160" alt="sentosa">
                         <div class="media-body ml-1">
                             <h4>Sentosa online store website</h4>
                             <p class="mt-md-3">
@@ -100,7 +100,7 @@
 
                 <div class="col-lg-5 col-md-9 mb-5">            
                     <div class="media d-md-flex flex-row-reverse justify-content-around align-items-center px-3">
-                        <img class="my-md-4" src="assets/drinkPromo.jpg" width="230" height="180">
+                        <img class="my-md-4" src="assets/drinkPromo.jpg" width="230" height="180" alt="drink promotion">
                         <div class="media-body ml-1">
                             <h4>Drink Promotion <br> website</h4>
                             <p class="mt-md-3">
