--- a/sentosa.html
+++ b/sentosa.html
@@ -47,7 +47,7 @@
             <div class="inner-wrapper">
                 <h3 class="mt-3">Sentosa online store <br> website</h3>
                 <div class="projectBox d-lg-flex justify-content-around background-light mt-lg-4 p-md-3">
-                    <img class="my-4 ml-lg-4" src="assets/Sentosa.png" width="380" height="240">
+                    <img class="my-4 ml-lg-4" src="assets/Sentosa.png" width="380" height="240" alt="sentosa">
                     <div class="mt-lg-5 mx-2 px-xl-5">
                         <h4>Project Brief</h4>
                         <p class="text-dark lh-sm">The original Sentosa store website is to be re-designed to provide a better user experience for customers using PHP and HTML coding.</p>
@@ -80,12 +80,12 @@
                 <h3>Highlights</h3>
 
                 <div class="d-lg-flex boxSpacing align-items-center">
-                    <img class="mx-md-4 shadow-box-left" src="assets/sentosaSS1.png" width="700" height="340">
+                    <img class="mx-md-4 shadow-box-left" src="assets/sentosaSS1.png" width="700" height="340" alt="sentosa account page">
                     <p class="mx-md-5 pl-lg-4 mt-md-5 text-dark">The website has an “Account” page which lists down each order with date of purchase, order status and the option to cancel order. The list of orders can be sorted out according to alphabetical, date and order status.</p>
                 </div>
 
                 <div class="d-lg-flex flex-lg-row-reverse boxSpacing align-items-center">
-                    <img class="shadow-box-right my-lg-5 mt-md-5 mb-md-4 mx-md-4" src="assets/sentosaSS2.png" width="700" height="340">
+                    <img class="shadow-box-right my-lg-5 mt-md-5 mb-md-4 mx-md-4" src="assets/sentosaSS2.png" width="700" height="340" alt="sentosa cart page">
                     <p class="mx-md-5 pt-3 pr-lg-4 text-dark">The “Cart” page is able to add any item under the “Shop” page. Not only it shows the item you have added, it is able to calculate the price according to the quantity added. There is an “Update Me” option which allows the user to change the quantity and the “Remove” option will remove the entire item from the cart.</p>    
                 </div>
             
