--- a/styleguide.html
+++ b/styleguide.html
@@ -47,7 +47,7 @@
             <div class="inner-wrapper">
                 <h3 class="mt-3">Sentosa online store <br> website</h3>
                 <div class="projectBox d-lg-flex justify-content-around background-light mt-lg-4 p-md-3">
-                    <img class="my-4 pl-xl-4 mx-sm-4" src="assets/styleguide.png" width="340" height="240">
+                    <img class="my-4 pl-xl-4 mx-sm-4" src="assets/styleguide.png" width="340" height="240" alt="styleguide">
                     <div class="mt-lg-5 mx-2 px-md-5">
                         <h4>Project Brief</h4>
                         <p class="text-dark lh-sm">Styleguide poster was designed based on a portfolio website that I have done using HTML.</p>
@@ -80,12 +80,12 @@
                 <h3>Highlights</h3>
 
                 <div class=" boxSpacing text-center">
-                    <img class="mx-md-4 box-shadow-left" src="assets/stylguide/webFull.jpg" width="500" height="340">
+                    <img class="mx-md-4 shadow-box-left" src="assets/stylguide/webFull.jpg" width="500" height="340" alt="styleguide website ref">
                     <p class="mx-md-5 pl-lg-4 mt-md-5 text-dark">Website design</p>
                 </div>
 
                 <div class=" boxSpacing text-center">
-                    <img class="mx-md-4 box-shadow-right" src="assets/stylguide/styleguideFULL.jpg" width="500" height="340">
+                    <img class="mx-md-4 shadow-box-right" src="assets/stylguide/styleguideFULL.jpg" width="500" height="340" alt="stylguide full">
                     <p class="mx-md-5 pl-lg-4 mt-md-5 text-dark">UX/UI styleguide based on website design</p>
                 </div>
             
