--- a/timbuktu.html
+++ b/timbuktu.html
@@ -47,7 +47,7 @@
             <div class="inner-wrapper">
                 <h3 class="mt-3">Sentosa online store <br> website</h3>
                 <div class="projectBox d-lg-flex justify-content-around background-light mt-lg-4 p-md-3">
-                    <img class="my-4 ml-lg-4" src="assets/TimbuktuPoly.png" width="380" height="240">
+                    <img class="my-4 ml-lg-4" src="assets/TimbuktuPoly.png" width="380" height="240" alt="TimbuktuPoly">
                     <div class="mt-lg-5 mx-2 px-xl-5">
                         <h4>Project Brief</h4>
                         <p class="text-dark lh-sm">Purpose of developing the student wellness website under Timbuktu Polytechnic is to promote personal hygiene, nutritious diet and various exercises to the students of Timbuktu Polytechnic using WIX.</p>
@@ -91,12 +91,12 @@
                 </div> -->
 
                 <div class="d-lg-flex boxSpacing align-items-center">
-                    <img class="mx-md-4 shadow-box-left" src="assets/timbuktu/colors.png" width="500" height="340">
+                    <img class="mx-md-4 shadow-box-left" src="assets/timbuktu/colors.png" width="500" height="340" alt="color scheme">
                     <p class="mx-md-5 pl-lg-4 mt-md-5 text-dark">Color palette that was decided to ensure the information provided by the website is focused on.</p>
                 </div>
 
                 <div class="d-lg-flex flex-lg-row-reverse boxSpacing align-items-center">
-                    <img class="shadow-box-right my-lg-5 mt-md-5 mb-md-4 mx-md-4 sitemap" src="assets/timbuktu/sitemap.png" width="500" height="340">
+                    <img class="shadow-box-right my-lg-5 mt-md-5 mb-md-4 mx-md-4 sitemap" src="assets/timbuktu/sitemap.png" width="500" height="340" alt="timbuktu sitemap">
                     <p class="mx-md-5 pt-3 pr-lg-4 text-dark"> Sitemap showing various pages needed for the website.</p>    
                 </div>
 
@@ -104,15 +104,15 @@
                     <div class="background-light wireframe p-md-4">
                         <div class="d-flex ">
                             <div class="p-md-3 ml-md-3">
-                                <img class="shadow-1-strong rounded mb-4" src="assets/timbuktu/Physical-Exercise.jpg" width="1100" height="1800">
+                                <img class="shadow-1-strong rounded mb-4 shadow-box-left" src="assets/timbuktu/Physical-Exercise.jpg" width="1100" height="1800">
                             </div>
     
                             <div>
                                 <div>
-                                    <img class="shadow-1-strong rounded mb-4" src="assets/timbuktu/Physical-Wellness(link).jpg" width="800" height="1500">
+                                    <img class="shadow-1-strong rounded mb-4 shadow-box-right" src="assets/timbuktu/Physical-Wellness(link).jpg" width="800" height="1500">
                                 </div>
                                 <div>
-                                    <img class="shadow-1-strong rounded mb-4" src="assets/timbuktu/Contact-Us.jpg" width="800" height="1500">
+                                    <img class="shadow-1-strong rounded mb-4 shadow-box-right" src="assets/timbuktu/Contact-Us.jpg" width="800" height="1500">
                                 </div>
                             </div>
                         </div>
@@ -121,12 +121,12 @@
                 </div>
 
                 <div class=" boxSpacing text-center">
-                    <img class="mx-md-4" src="assets/timbuktu/wellnessWeb.png" width="500" height="340">
+                    <img class="mx-md-4 shadow-box-left" src="assets/timbuktu/wellnessWeb.png" width="500" height="340">
                     <p class="mx-md-5 pl-lg-4 mt-md-5 text-dark">Physical Wellness page</p>
                 </div>
 
                 <div class=" boxSpacing text-center">
-                    <img class="mx-md-4" src="assets/timbuktu/emotionalWeb.png" width="500" height="340">
+                    <img class="mx-md-4 shadow-box-right" src="assets/timbuktu/emotionalWeb.png" width="500" height="340">
                     <p class="mx-md-5 pl-lg-4 mt-md-5 text-dark">Emotional Wellness page</p>
                 </div>
 
