--- a/uobFooter.html
+++ b/uobFooter.html
@@ -47,7 +47,7 @@
             <div class="inner-wrapper">
                 <h3 class="mt-3">Drink promotion<br> website</h3>
                 <div class="projectBox d-lg-flex justify-content-around background-light mt-lg-4 p-md-3">
-                    <img class="my-4 pl-xl-4 mx-sm-4 shadow-left" src="assets/uob.JPG" width="340" height="180">
+                    <img class="my-4 pl-xl-4 mx-sm-4 shadow-left" src="assets/uob.JPG" width="340" height="180" alt="uob">
                     <div class="mt-lg-5 mx-2 px-md-5">
                         <h4>Project Brief</h4>
                         <p class="text-dark lh-sm">Assigned to design a footer for easier navigation of the website, including a mobile view. </p>
@@ -81,7 +81,7 @@
             <h3>Highlights</h3>
 
             <div class="boxSpacing text-center">
-                <img class="mx-md-4 shadow-box-left" src="assets/uob/uob_Footer.png" width="500" height="340">
+                <img class="mx-md-4 shadow-box-left" src="assets/uob/uob_Footer.png" width="500" height="340" alt="uob website full">
                 <p class="mx-md-5 pl-lg-4 mt-md-5 text-dark">Full Website view</p>
             </div>
 
@@ -89,12 +89,12 @@
                 <div class="uob-mobile p-md-4 text-center">
                     <div class="d-md-flex justify-content-around ">
                         <div class="mx-auto p-3">
-                            <img class="shadow-1-strong rounded mb-md-4 shadow-box-left" src="assets/uob/collapse.JPG" width="250" height="500">
+                            <img class="shadow-1-strong rounded mb-md-4 shadow-box-left" src="assets/uob/collapse.JPG" width="250" height="500" alt="uob collapsed footer (mobile)">
                             <p class="py-md-3 text-dark">Mobile footer (collapsed) - "Open for More Links[+]" collapses the footer</p> 
                         </div>
 
                         <div class="mx-auto p-3">
-                            <img class="shadow-1-strong rounded mb-md-4 shadow-box-right" src="assets/uob/uncollapse.JPG" width="250" height="500">
+                            <img class="shadow-1-strong rounded mb-md-4 shadow-box-right" src="assets/uob/uncollapse.JPG" width="250" height="500" alt="uob uncollapsed footer (mobile)">
                             <p class="py-md-3 text-dark">Mobile footer (uncollapsed) - "Open for More Links[+]" is changed to "Collapse[-]"</p> 
                         </div>
                     </div>
