--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="text-box pr-3 text-center text-md-left">
                     <h5>Hello!</h5>
-                    <h1>I'm a UI/UX designer based in Singapore</h1>
+                    <h1>I'm a designer based in Singapore</h1>
                     <p>
                         <a href="work.html" class="btn-primary">My Work</a>
                     </p>
@@ -64,7 +64,7 @@
         <div class="container text-light">
             <div class="inner-wrapper justify-content-center align-items-center">
                 <h4>A little about me</h4>
-                <p class="my-3">A UI/UX designer interested in designing websites user interface to enhance the user experience when exploring a website. 
+                <p class="my-3">A designer interested in designing websites user interface to enhance the user experience when exploring a website. 
                     By designing and researching different wireframes or protoypes, I can pick out the best suited wireframe or prototype to integrate into a web project.
                     </p>
                 
