--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <div class="container text-light">
             <div class="inner-wrapper justify-content-center align-items-center">
                 <h4>A little about me</h4>
-                <p class="my-3">A designer interested in designing websites user interface to enhance the user experience when exploring a website. 
-                    By designing and researching different wireframes or protoypes, I can pick out the best suited wireframe or prototype to integrate into a web project.
+                <p class="my-3">An undergraduate software engineer interested in designing and developing in both backend or frontend of any applications. 
+                    By experiencing and understanding different frameworks and architectures, I am able to design an application of any kind in order to fulfill the requirements if any.
                     </p>
                 
                 <p class="my-3">Additionally, with the knowledge of a front-end developer, I am able to develop various websites that allow users to interact different kinds of elements within a web application, 
