--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                                 <a class="nav-link" href="contact.html">Contact</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="resources/My Resume.pdf">Resume</a>
+                                <a class="nav-link" href="resources/dx resume.pdf">Resume</a>
                             </li>
 						</ul>
                     </div>  
