--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="text-box pr-3 text-center text-md-left">
                     <h5>Hello!</h5>
-                    <h1>I'm a designer based in Singapore</h1>
+                    <h1>I'm an undergraduate software engineer based in Singapore</h1>
                     <p>
                         <a href="work.html" class="btn-primary">My Work</a>
                     </p>
@@ -65,13 +65,13 @@
             <div class="inner-wrapper justify-content-center align-items-center">
                 <h4>A little about me</h4>
                 <p class="my-3">An undergraduate software engineer interested in designing and developing in both backend or frontend of any applications. 
-                    By experiencing and understanding different frameworks and architectures, I am able to design an application of any kind in order to fulfill the requirements if any.
+                    I am striving to be able to design an application of any kind in order to fulfill the requirements if any by experiencing and understanding different frameworks and architectures, 
                     </p>
                 
-                <p class="my-3">Additionally, with the knowledge of a front-end developer, I am able to develop various websites that allow users to interact different kinds of elements within a web application, 
-                    along with some grasp of back-end developer, I am able to combine logic and integration to better my web developing skills.</p>
+                <p class="my-3">Additionally, with the knowledge of a front-end developer, I am able to understand how various websites are developed that allow users to interact different kinds of elements within a web application, 
+                    along with some grasp of back-end developer in order to better create a software system architecture that enhances in developmenet and maintainability.</p>
 
-                <p>I’ve graduated from Nanyang Polytechnic 2021 with a Diploma in Multimedia and Infocomm Technology.</p>
+                <p>I’ve currently pursing a degree Information Communication and Technology majoring in Software Engineering in Singapore Institute of Technology.</p>
                 <p>
                     <a href="about.html" class="btn-primary">About Me</a>
                 </p>
