update to about/index

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="inner-wrapper justify-content-center align-items-center">
                 <h4>A little about me</h4>
                 <p class="my-3">An undergraduate software engineer interested in designing and developing in both backend or frontend of any applications. 
-                    I am striving to be able to design an application of any kind in order to fulfill the requirements if any by experiencing and understanding different frameworks and architectures, 
+                    I am striving to be able to design an application of any kind in order to fulfill the requirements if any by experiencing and understanding different frameworks and architectures.
                     </p>
                 
                 <p class="my-3">Additionally, with the knowledge of a front-end developer, I am able to understand how various websites are developed that allow users to interact different kinds of elements within a web application, 
