--- a/about.html
+++ b/about.html
@@ -52,16 +52,16 @@
 
                     <div class="pl-lg-3 mx-4 mt-md-2 px-md-3">
                         <h4>I'm Daixuan</h4>
-                        <p class="text-dark lh-sm py-2">A UI/UX designer interested in designing websites user interface to enhance the user experience when exploring a website. 
-                            By designing and researching different wireframes or protoypes, I can pick out the best suited wireframe or prototype to integrate into a web project.
+                        <p class="text-dark lh-sm py-2">An undergraduate software engineer interested in designing and developing in both backend or frontend of any applications. 
+                    I am striving to be able to design an application of any kind in order to fulfill the requirements if any by experiencing and understanding different frameworks and architectures.
                         </p>
 
                         <p class="text-dark lh-sm py-2">
-                            Additionally, with the knowledge of a front-end developer, I'm able to develop various websites that allow users to interact different kinds of elements within a web application, 
-                            along with some grasp of back-end developer to combine logic and integration to better my web developing skills.
+                            Additionally, with the knowledge of a front-end developer, I am able to understand how various websites are developed that allow users to interact different kinds of elements within a web application, 
+                    along with some grasp of back-end developer in order to better create a software system architecture that enhances in developmenet and maintainability.
                         </p>
                         
-                        <a class="nav-link" href="resources/My Resume.pdf">Resume (pdf)</a>
+                        <a class="nav-link" href="resources/My Resume.pdf">Click here to check out my Resume (pdf)</a>
 
                         <!-- <div class="d-flex justify-content-between">
                             <div>
