update to about me

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                     along with some grasp of back-end developer in order to better create a software system architecture that enhances in developmenet and maintainability.
                         </p>
                         
-                        <a class="nav-link" href="resources/My Resume.pdf">Click here to check out my Resume (pdf)</a>
+                        <a class="nav-link" href="resources/dx resume.pdf">Click here to check out my Resume (pdf)</a>
 
                         <!-- <div class="d-flex justify-content-between">
                             <div>
@@ -86,6 +86,10 @@
             <div class="inner-wrapper row d-md-flex aboutInfo2">
                 <div class="col p-4">
                     <h4 class="pb-3">Education</h4>
+                    <p>2023-Current<br>
+                        Singapore institute of Technology <br>
+                        Information and Communication Technology(Software Engineering)
+                    </p>
                     <p>2018-2021<br>
                         Nanyang Polytechnic <br>
                         Multimedia and Infocomm Technology
@@ -94,6 +98,11 @@
 
                 <div class="col p-4">
                     <h4 class="pb-3">Work Experience</h4>
+                    <p>2021-2022<br>
+                        Graphics & UI/UX Designer <br>
+                        Level Five Solutions Pte Ltd
+                    </p>
+
                     <p>2020-2021<br>
                         Front-end developer (6 months internship) <br>
                         GERMS Digital Pte Ltd
