update to about me

--- a/about.html
+++ b/about.html
@@ -53,12 +53,12 @@
                     <div class="pl-lg-3 mx-4 mt-md-2 px-md-3">
                         <h4>I'm Daixuan</h4>
                         <p class="text-dark lh-sm py-2">An undergraduate software engineer interested in designing and developing in both backend or frontend of any applications. 
-                    I am striving to be able to design an application of any kind in order to fulfill the requirements if any by experiencing and understanding different frameworks and architectures.
+                            I am striving to be able to design an application of any kind in order to fulfill the requirements if any by experiencing and understanding different frameworks and architectures.
                         </p>
 
                         <p class="text-dark lh-sm py-2">
-                            Additionally, with the knowledge of a front-end developer, I am able to understand how various websites are developed that allow users to interact different kinds of elements within a web application, 
-                    along with some grasp of back-end developer in order to better create a software system architecture that enhances in developmenet and maintainability.
+                            Additionally, with the knowledge of a front-end developer, I am able to understand how various websites are developed that allow users to interact different kinds of elements within a web application
+                            in order to better create a software system architecture that enhances in developmenet and maintainability.
                         </p>
                         
                         <a class="nav-link" href="resources/dx resume.pdf">Click here to check out my Resume (pdf)</a>
@@ -88,7 +88,7 @@
                     <h4 class="pb-3">Education</h4>
                     <p>2023-Current<br>
                         Singapore institute of Technology <br>
-                        Information and Communication Technology(Software Engineering)
+                        Information and Communication Technology <br>(Software Engineering)
                     </p>
                     <p>2018-2021<br>
                         Nanyang Polytechnic <br>
