--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,8 @@
 </head>
 <body>
     <header class="py-0">
-        <nav class="navbar navbar-expand-lg">
+        <div id="nav-placeholder"></div>
+        <!-- <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <h3 class="navbar-brand"><a class="nav-link" href="index.html">DaiXuan</a></h3>
 
@@ -34,12 +35,12 @@
                                 <a class="nav-link" href="contact.html">Contact</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="resources/My Resume.pdf">Resume</a>
+                                <a class="nav-link" href="resources/dx_resume.pdf">Resume</a>
                             </li>
 						</ul>
                     </div>  
             </div>
-        </nav>
+        </nav> -->
     </header>
 
 
@@ -58,8 +59,8 @@
 
                             <h4>Social Media</h4>
                             <div class="d-flex social-contact">
-                                <img class="mt-2 mr-md-1" src="assets/icons/IG_black.png" width="52" height="50">
-                                <img class="mt-2 mr-md-1" src="assets/icons/twitter_black.png" width="52" height="50">
+                                <!-- <img class="mt-2 mr-md-1" src="assets/icons/IG_black.png" width="52" height="50">
+                                <img class="mt-2 mr-md-1" src="assets/icons/twitter_black.png" width="52" height="50"> -->
                             </div>
 
                             <p class="text-dark">Feel free to contact or ask any questions regarding about me or my work. Will reply as soon as possible.</p>
@@ -129,6 +130,15 @@
                 
         </div>
     </footer>
+
+    <script>
+    // load nav
+    fetch("nav.html")
+      .then(res => res.text())
+      .then(data => document.getElementById("nav-placeholder").innerHTML = data);
+
+    
+    </script>
 
     <script src="/js/jquery.min.js"></script>
     <script src="/js/popper.min.js"></script>
