move assets into respective folders

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                 <h3>About Me</h3>
                 <div class="aboutInfo background-light mt-md-5 py-lg-5 d-lg-flex p-md-4">
                     
-                    <img class="mt-xl-2 ml-xl-2 shadow-left" src="assets/profile.jpg" width="300" alt="profile picture">
+                    <img class="mt-xl-2 ml-xl-2 shadow-left" src="assets/preview/profile.jpg" width="300" alt="profile picture">
 
                     <div class="pl-lg-3 mx-4 mt-md-2 px-md-3">
                         <h4>I'm Daixuan</h4>
