--- a/contact.html
+++ b/contact.html
@@ -97,8 +97,8 @@
     </section>
 
 
-
-    <footer>
+    <div id="footer-placeholder"></div>
+    <!-- <footer>
         <div class="flex-footer">
             <div class="container">
                 <div class="row pt-3">
@@ -129,15 +129,18 @@
             </div>
                 
         </div>
-    </footer>
+    </footer> -->
 
     <script>
-    // load nav
+    // to load nav
     fetch("nav.html")
       .then(res => res.text())
       .then(data => document.getElementById("nav-placeholder").innerHTML = data);
 
-    
+    // to load footer
+    fetch("footer.html")
+      .then(res => res.text())
+      .then(data => document.getElementById("footer-placeholder").innerHTML = data);
     </script>
 
     <script src="/js/jquery.min.js"></script>
