--- a/work.html
+++ b/work.html
@@ -49,7 +49,7 @@
                 <div class="row justify-content-around mb-lg-5 pt-5">
                     <div class="col-lg-6 col-md-9 mb-5">
                         <div class="media d-md-flex flex-row-reverse justify-content-around align-items-center p-md-3">
-                            <img class="my-4" src="assets/Sentosa.png" width="300" height="160">
+                            <img class="my-4" src="assets/preview/Sentosa.png" width="300" height="160">
                             <div class="media-body ml-1">
                                 <h4>Sentosa online<br> store website</h4>
                                 <p class="mt-3">
@@ -62,7 +62,7 @@
                     
                     <div class="col-lg-6 col-md-9 mb-5">
                         <div class="media d-md-flex flex-row-reverse justify-content-around align-items-center p-md-3">
-                            <img class="shadow-right my-4" src="assets/drinkPromo.jpg" width="230" height="180"> 
+                            <img class="shadow-right my-4" src="assets/preview/drinkPromo.jpg" width="230" height="180"> 
                             <div class="media-body ml-1">
                                 <h4>Drink Promotion<br> website</h4>
                                 <p class="mt-3">
@@ -76,7 +76,7 @@
 
                     <div class="col-lg-6 col-md-9 mb-5">
                         <div class="media d-md-flex flex-row-reverse justify-content-around align-items-center p-md-3">
-                            <img class="shadow-right my-4" src="assets/styleguide.png" width="230" height="180"> 
+                            <img class="shadow-right my-4" src="assets/preview/styleguide.png" width="230" height="180"> 
                             <div class="media-body ml-1">
                                 <h4>Styleguide Ux<br> design</h4>
                                 <p class="mt-3">
@@ -88,7 +88,7 @@
     
                     <div class="col-lg-6 col-md-9 mb-5">
                         <div class="media d-md-flex flex-row-reverse justify-content-around align-items-center p-md-3">
-                            <img class="my-4" src="assets/TimbuktuPoly.png" width="320" height="180">  
+                            <img class="my-4" src="assets/preview/TimbuktuPoly.png" width="320" height="180">  
                             <div class="media-body ml-1">
                                 <h4>Timbuktu<br> Polytechnic website</h4>
                                 <p class="mt-3">
@@ -102,7 +102,7 @@
 
                     <div class="col-lg-6 col-md-9 mb-5">
                         <div class="media d-md-flex flex-row-reverse justify-content-around align-items-center p-md-3">
-                            <img class="shadow-right my-4" src="assets/uob.JPG" width="250" height="150"> 
+                            <img class="shadow-right my-4" src="assets/preview/uob.JPG" width="250" height="150"> 
                             <div class="media-body ml-1">
                                 <h4>UOB website</h4>
                                 <p class="mt-3">
