testing new page

--- a/sentosa.html
+++ b/sentosa.html
@@ -42,6 +42,7 @@
         </nav>
     </header>
 
+    <!-- Intro -->
     <section class="intro">
         <div class="container">
             <div class="inner-wrapper">
@@ -63,6 +64,7 @@
         </div>
     </section>
 
+    <!-- challenge/result -->
     <article class="about pt-md-5 pt-sm-4 pb-4">
         <div class="container text-light">
             <div class="inner-wrapper justify-content-center align-items-center">
@@ -75,17 +77,18 @@
         </div>
     </article>
 
+    <!-- Highlight -->
     <section class="moreInfo">
         <div class="container">
                 <h3>Highlights</h3>
 
                 <div class="d-lg-flex boxSpacing align-items-center">
-                    <img class="mx-md-4 shadow-box-left" src="assets/sentosaSS1.png" width="700" height="340" alt="sentosa account page">
+                    <img class="mx-md-4 shadow-box-left" src="assets/sentosa/sentosaSS1.png" width="700" height="340" alt="sentosa account page">
                     <p class="mx-md-5 pl-lg-4 mt-md-5 text-dark">The website has an “Account” page which lists down each order with date of purchase, order status and the option to cancel order. The list of orders can be sorted out according to alphabetical, date and order status.</p>
                 </div>
 
                 <div class="d-lg-flex flex-lg-row-reverse boxSpacing align-items-center">
-                    <img class="shadow-box-right my-lg-5 mt-md-5 mb-md-4 mx-md-4" src="assets/sentosaSS2.png" width="700" height="340" alt="sentosa cart page">
+                    <img class="shadow-box-right my-lg-5 mt-md-5 mb-md-4 mx-md-4" src="assets/sentosa/sentosaSS2.png" width="700" height="340" alt="sentosa cart page">
                     <p class="mx-md-5 pt-3 pr-lg-4 text-dark">The “Cart” page is able to add any item under the “Shop” page. Not only it shows the item you have added, it is able to calculate the price according to the quantity added. There is an “Update Me” option which allows the user to change the quantity and the “Remove” option will remove the entire item from the cart.</p>    
                 </div>
             
