--- a/index.html
+++ b/index.html
@@ -90,6 +90,19 @@
                     <div class="media d-md-flex flex-row-reverse justify-content-around align-items-center px-3">
                         <img class="my-md-4" src="assets/preview/Sentosa.png" width="300" height="160" alt="sentosa">
                         <div class="media-body ml-1">
+                            <h4>Eye Rest Mobile app</h4>
+                            <p class="mt-md-3">
+                                <a href="eye_rest.html" class="btn-primary">View work</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-lg-5 col-md-9 mb-5">
+                    <div class="media d-md-flex flex-row-reverse justify-content-around align-items-center px-3">
+                        <img class="my-md-4" src="assets/preview/Sentosa.png" width="300" height="160" alt="sentosa">
+                        <div class="media-body ml-1">
                             <h4>Sentosa online store website</h4>
                             <p class="mt-md-3">
                                 <a href="sentosa.html" class="btn-primary">View work</a>
