fixes for images for other work pages

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="media d-md-flex flex-row-reverse justify-content-around align-items-center px-3">
                         <img class="my-md-4" src="assets/preview/Sentosa.png" width="300" height="160" alt="sentosa">
                         <div class="media-body ml-1">
-                            <h4>Eye Rest Mobile app</h4>
+                            <h4>Eye Rest Mobile Application</h4>
                             <p class="mt-md-3">
                                 <a href="eye_rest.html" class="btn-primary">View work</a>
                             </p>
