--- a/sentosa.html
+++ b/sentosa.html
@@ -48,7 +48,7 @@
             <div class="inner-wrapper">
                 <h3 class="mt-3">Sentosa online store <br> website</h3>
                 <div class="projectBox d-lg-flex justify-content-around background-light mt-lg-4 p-md-3">
-                    <img class="my-4 ml-lg-4" src="assets/Sentosa.png" width="380" height="240" alt="sentosa">
+                    <img class="my-4 ml-lg-4" src="assets/preview/Sentosa.png" width="380" height="240" alt="sentosa">
                     <div class="mt-lg-5 mx-2 px-xl-5">
                         <h4>Project Brief</h4>
                         <p class="text-dark lh-sm">The original Sentosa store website is to be re-designed to provide a better user experience for customers using PHP and HTML coding.</p>
