--- a/styleguide.html
+++ b/styleguide.html
@@ -47,7 +47,7 @@
             <div class="inner-wrapper">
                 <h3 class="mt-3">Sentosa online store <br> website</h3>
                 <div class="projectBox d-lg-flex justify-content-around background-light mt-lg-4 p-md-3">
-                    <img class="my-4 pl-xl-4 mx-sm-4" src="assets/styleguide.png" width="340" height="240" alt="styleguide">
+                    <img class="my-4 pl-xl-4 mx-sm-4" src="assets/preview/styleguide.png" width="340" height="240" alt="styleguide">
                     <div class="mt-lg-5 mx-2 px-md-5">
                         <h4>Project Brief</h4>
                         <p class="text-dark lh-sm">Styleguide poster was designed based on a portfolio website that I have done using HTML.</p>
