--- a/timbuktu.html
+++ b/timbuktu.html
@@ -47,7 +47,7 @@
             <div class="inner-wrapper">
                 <h3 class="mt-3">Sentosa online store <br> website</h3>
                 <div class="projectBox d-lg-flex justify-content-around background-light mt-lg-4 p-md-3">
-                    <img class="my-4 ml-lg-4" src="assets/TimbuktuPoly.png" width="380" height="240" alt="TimbuktuPoly">
+                    <img class="my-4 ml-lg-4" src="assets/preview/TimbuktuPoly.png" width="380" height="240" alt="TimbuktuPoly">
                     <div class="mt-lg-5 mx-2 px-xl-5">
                         <h4>Project Brief</h4>
                         <p class="text-dark lh-sm">Purpose of developing the student wellness website under Timbuktu Polytechnic is to promote personal hygiene, nutritious diet and various exercises to the students of Timbuktu Polytechnic using WIX.</p>
