--- a/uobFooter.html
+++ b/uobFooter.html
@@ -47,7 +47,7 @@
             <div class="inner-wrapper">
                 <h3 class="mt-3">Drink promotion<br> website</h3>
                 <div class="projectBox d-lg-flex justify-content-around background-light mt-lg-4 p-md-3">
-                    <img class="my-4 pl-xl-4 mx-sm-4 shadow-left" src="assets/uob.JPG" width="340" height="180" alt="uob">
+                    <img class="my-4 pl-xl-4 mx-sm-4 shadow-left" src="assets/preview/uob.JPG" width="340" height="180" alt="uob">
                     <div class="mt-lg-5 mx-2 px-md-5">
                         <h4>Project Brief</h4>
                         <p class="text-dark lh-sm">Assigned to design a footer for easier navigation of the website, including a mobile view. </p>
