--- a/eye_rest.html
+++ b/eye_rest.html
@@ -76,6 +76,14 @@
                 <div class="er">
                     <img class="" src="assets/eyeRest/guided_eye.png" alt="guided eye exercise - prev">
                 </div>
+
+                <!-- The Modal -->
+                <div id="imgModal" class="modal">
+                    <span class="close">&times;</span>
+                    <img class="modal-content" id="fullImg">
+                    <div id="caption"></div>
+                </div>
+
                 <div class="er">
                     <img class="" src="assets/eyeRest/eye_activity.png" alt="guided eye exercise - prev">
                 </div>
