--- a/eye_rest.html
+++ b/eye_rest.html
@@ -77,21 +77,24 @@
             <h4 class="my-3">Key Features</h4>
             <p class="text-dark">Insert description TBC</p>
             <div class="d-flex align-items-center">
-                <div class="er">
+                <div class="er text-center">
                     <img class="" src="assets/eyeRest/guided_eye.png" 
                     data-full="assets/eyeRest/guided_eye_full.png" alt="Guided Eye Exercise"
                     data-caption="Follow along with exercises designed to relax and strengthen eye muscles.">
+                    <h4>Guided Eye Exercise</h4>
                 </div>
 
-                <div class="er">
+                <div class="er text-center">
                     <img class="" src="assets/eyeRest/eye_activity.png" alt="Eye Activity Tracker (via Camera)"
                     data-full="assets/eyeRest/activity_full.png"
                     data-caption="Utilizes Google MediaPipe Face Landmarker to monitor eye movements (like blinks and rolls) during exercises, providing feedback on activity.">
+                    <h4>Eye Activity Tracker</h4>
                 </div>
-                <div class="er">
+                <div class="er text-center">
                     <img class="" src="assets/eyeRest/usage_insights.png" alt="Usage Insights"
                     data-full="assets/eyeRest/insight_full.png"
                     data-caption="View statistics on your eye exercise activity (like blink counts and eye rolls) to understand your patterns.">
+                    <h4>Usage Insights</h4>
                 </div>
             </div>
 
