--- a/eye_rest.html
+++ b/eye_rest.html
@@ -133,6 +133,7 @@
     </section>
 
     <div id="footer-placeholder"></div>
+
     <script>
         // to load nav
         fetch("nav.html")
@@ -172,8 +173,8 @@
         }
     </script>
 
-        <script src="/js/jquery.min.js"></script>
-        <script src="/js/popper.min.js"></script>
-        <script src="/js/bootstrap.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
