--- a/eye_rest.html
+++ b/eye_rest.html
@@ -76,7 +76,7 @@
 
             <h4 class="my-3">Key Features</h4>
             <p class="text-dark">Insert description TBC</p>
-            <div class="d-flex align-items-center">
+            <div class="my-5 d-flex align-items-center">
                 <div class="er text-center">
                     <img class="" src="assets/eyeRest/guided_eye.png" 
                     data-full="assets/eyeRest/guided_eye_full.png" alt="Guided Eye Exercise"
@@ -173,6 +173,7 @@
         }
     </script>
 
+    <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
