--- a/sentosa.html
+++ b/sentosa.html
@@ -13,7 +13,7 @@
     <title>DaiXuan's Portfolio</title>
 </head>
 <body>
-    <header class="py-0">
+    <!-- <header class="py-0">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <h3 class="navbar-brand"><a class="nav-link" href="index.html">DaiXuan</a></h3>
@@ -40,6 +40,9 @@
                     </div>  
             </div>
         </nav>
+    </header> -->
+    <header class="py-0">
+        <div id="nav-placeholder"></div>
     </header>
 
     <!-- Intro -->
