--- a/nav.html
+++ b/nav.html
@@ -2,7 +2,7 @@
 
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <h3 class="navbar-brand"><a class="nav-link" href="index.html">DaiXuan</a></h3>
+                <h3 class="navbar-brand"><a class="nav-link" href="index.html">Home</a></h3>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
 					<span class="navbar-toggler-icon"></span>
