--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <header class="py-0">
         <div id="nav-placeholder"></div>
     </header>
-    
+
     <section class="intro">
         <div class="container">
             <div class="d-md-flex flex-row-reverse justify-content-center align-items-center my-3">
@@ -131,7 +131,7 @@
         </div>
     </section>
 
-    <footer>
+    <!-- <footer>
         <div class="flex-footer">
             <div class="container">
                 <div class="row pt-3">
@@ -162,9 +162,21 @@
             </div>
                 
         </div>
-    </footer>
+    </footer> -->
+    <div id="footer-placeholder"></div>
+    <script>
+        // to load nav
+        fetch("nav.html")
+        .then(res => res.text())
+        .then(data => document.getElementById("nav-placeholder").innerHTML = data);
 
-   <script src="js/bootstrap.bundle.min.js"></script>
+        // to load footer
+        fetch("footer.html")
+        .then(res => res.text())
+        .then(data => document.getElementById("footer-placeholder").innerHTML = data);
+    </script>
+
+    <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
