--- a/success.html
+++ b/success.html
@@ -124,8 +124,6 @@
         .then(data => document.getElementById("footer-placeholder").innerHTML = data);
     </script>
 
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/popper.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
