fixed resume download

--- a/nav.html
+++ b/nav.html
@@ -20,7 +20,7 @@
                                 <a class="nav-link" href="contact.html">Contact</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="resources/dx resume.pdf">Resume</a>
+                                <a class="nav-link" href="assets/resources/dx resume.pdf">Resume</a>
                             </li>
 						</ul>
                     </div>  
