--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                             in order to better create a software system architecture that enhances in developmenet and maintainability.
                         </p>
                         
-                        <a class="nav-link" href="assets/resources/dx resume.pdf">Click here to check out my Resume (pdf)</a>
+                        <a class="nav-link" href="assets/resources/dx_resume.pdf">Click here to check out my Resume (pdf)</a>
 
                         <!-- <div class="d-flex justify-content-between">
                             <div>
